--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -58,6 +58,14 @@
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 		</dependency>
+
+
+		   <dependency>
+        <groupId>jakarta.validation</groupId>
+        <artifactId>jakarta.validation-api</artifactId>
+        <version>3.0.2</version>
+    </dependency>
+	
 	</dependencies>
 
 	<build>
