feat: dependency imports

--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -25,3 +25,6 @@ spring.jpa.hibernate.ddl-auto=create-drop
 logging.level.org.hibernate.SQL=DEBUG
 #imprime los parámetros de las querys
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+springdoc.api-docs.version=openapi-3-0
+
