--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -65,6 +65,14 @@
         <artifactId>jakarta.validation-api</artifactId>
         <version>3.0.2</version>
     </dependency>
+
+	<!-- https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-ui -->
+	   <dependency>
+      <groupId>org.springdoc</groupId>
+      <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+      <version>2.8.6</version>
+   </dependency>
+
 	
 	</dependencies>
 
