--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -73,6 +73,11 @@
       <version>2.8.6</version>
    </dependency>
 
+<dependency>
+    <groupId>org.apache.poi</groupId>
+    <artifactId>poi-ooxml</artifactId>
+    <version>5.2.3</version>
+</dependency>
 	
 	</dependencies>
 
