feature: required docker files and ExcelService fix
docker run -p 8090:8080 clinicashiba-backend

--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -88,6 +88,22 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+
+		<resources>
+		<resource>
+		<directory>src/main/resources</directory>
+		<includes>
+		<include>**/*.xlsx</include>
+		</includes>
+		</resource>
+		</resources>
+
+
+
+		
 	</build>
+
+
+
 
 </project>
