--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -9,6 +9,9 @@ spring.datasource.url=jdbc:h2:file:./mydatabase
 spring.datasource.username=sa
 spring.datasource.password=
 
+spring.h2.console.settings.web-allow-others=true
+
+
 #consola de administración de h2
 spring.h2.console.enabled=true
 #localhost:8090/h2
