first iteration, working retrieval of products

--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -20,7 +20,9 @@ spring.h2.console.path=/h2
 spring.jpa.generate-ddl=true
 #borrar la tabla cada vez
 spring.jpa.hibernate.ddl-auto=create-drop
-
+#inicializar data.sql después de la creación de tablas
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
 
 #logging
 #permite imprimir la query
@@ -29,6 +31,10 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 springdoc.api-docs.version=openapi-3-0
+
+# Error handling configuration
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.web.resources.add-mappings=false
 
 #---
 spring.config.activate.on-profile=test
@@ -52,7 +58,9 @@ spring.h2.console.path=/h2
 spring.jpa.generate-ddl=true
 #borrar la tabla cada vez
 spring.jpa.hibernate.ddl-auto=create-drop
-
+#inicializar data.sql después de la creación de tablas
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
 
 #logging
 #permite imprimir la query
@@ -61,3 +69,7 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 springdoc.api-docs.version=openapi-3-0
+
+# Error handling configuration
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.web.resources.add-mappings=false
