--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -124,6 +124,11 @@
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 
+		<!-- Spring Boot Actuator for health checks -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
 
 		<dependency>
 		    <groupId>io.jsonwebtoken</groupId>
