feat: PostgreSQL migration

--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,63 +1,35 @@
-#---
-spring.config.activate.on-profile=default
-spring.application.name=demo
-server.port=8090
-#datasource
-spring.jpa.database=h2
-spring.datasource.driver-class-name=org.h2.Driver
+spring.config.activate.on-profile=production
+spring.application.name=clinica-shiba
 
-#nombre base de datos
-spring.datasource.url=jdbc:h2:file:./mydatabase
-spring.datasource.username=sa
-spring.datasource.password=
+# Server
+server.port=${PORT:8090}
 
-#consola de administración de h2
-spring.h2.console.enabled=true
-#localhost:8090/h2
-spring.h2.console.path=/h2
+# PostgreSQL (Render)
+spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-#datos de prueba
-spring.jpa.generate-ddl=true
-#borrar la tabla cada vez
-spring.jpa.hibernate.ddl-auto=create-drop
+# JPA / Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=false
 
+# Logging
+logging.level.org.hibernate.SQL=WARN
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=WARN
 
-#logging
-#permite imprimir la query
-logging.level.org.hibernate.SQL=DEBUG
-#imprime los parámetros de las querys
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+# Actuator (para monitoreo Render)
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=always
 
+# Swagger/OpenAPI
 springdoc.api-docs.version=openapi-3-0
+springdoc.swagger-ui.path=/swagger-ui.html
 
-#---
-spring.config.activate.on-profile=test
-spring.application.name=demo
-server.port=8090
-#datasource
-spring.jpa.database=h2
-spring.datasource.driver-class-name=org.h2.Driver
+# CORS
+cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:4200,https://your-frontend-domain.com}
 
-#nombre base de datos
-spring.datasource.url=jdbc:h2:file:./mydatabase
-spring.datasource.username=sa
-spring.datasource.password=
-
-#consola de administración de h2
-spring.h2.console.enabled=true
-#localhost:8090/h2
-spring.h2.console.path=/h2
-
-#datos de prueba
-spring.jpa.generate-ddl=true
-#borrar la tabla cada vez
-spring.jpa.hibernate.ddl-auto=create-drop
-
-
-#logging
-#permite imprimir la query
-logging.level.org.hibernate.SQL=DEBUG
-#imprime los parámetros de las querys
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-
-springdoc.api-docs.version=openapi-3-0
+# Archivos subidos
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
