--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,25 +1,25 @@
-spring.config.activate.on-profile=production
 spring.application.name=clinica-shiba
 
 # Server
 server.port=${PORT:8090}
 
-# PostgreSQL (Render)
-spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASSWORD}
-spring.datasource.driver-class-name=org.postgresql.Driver
+# H2 Database (for development)
+spring.datasource.url=jdbc:h2:file:./mydatabase
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.h2.console.enabled=true
 
 # JPA / Hibernate
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.show-sql=true
 
 # Logging
-logging.level.org.hibernate.SQL=WARN
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=WARN
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
-# Actuator (para monitoreo Render)
+# Actuator
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=always
 
@@ -28,7 +28,7 @@ springdoc.api-docs.version=openapi-3-0
 springdoc.swagger-ui.path=/swagger-ui.html
 
 # CORS
-cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:4200,https://your-frontend-domain.com}
+cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:4200,http://localhost:3000}
 
 # Archivos subidos
 spring.servlet.multipart.max-file-size=10MB
