h2 dependency removed, updated postgres credencials

--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -3,16 +3,14 @@ spring.application.name=clinica-shiba
 # Server
 server.port=${PORT:8090}
 
-# H2 Database (for development)
-spring.datasource.url=jdbc:h2:file:./mydatabase
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.h2.console.enabled=true
+# PostgreSQL Database (for development - using same as production)
+spring.datasource.url=jdbc:postgresql://dpg-d0pphc6uk2gs739tpc60-a.oregon-postgres.render.com:5432/clinica_shiba_db
+spring.datasource.username=clinica_shiba_db_user
+spring.datasource.password=vt41tuwta2hhIVTUgekbLrfx8liLxiWa
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA / Hibernate
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.show-sql=true
 
 # Logging
