--- a/demo/src/main/resources/application-production.properties
+++ b/demo/src/main/resources/application-production.properties
@@ -4,16 +4,15 @@ spring.application.name=clinica-shiba
 # Server configuration
 server.port=${PORT:8090}
 
-# PostgreSQL configuration using Render environment variables
-spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASSWORD}
+# PostgreSQL configuration using direct URL from Render
+spring.datasource.url=jdbc:postgresql://dpg-d0pphc6uk2gs739tpc60-a.oregon-postgres.render.com:5432/clinica_shiba_db
+spring.datasource.username=clinica_shiba_db_user
+spring.datasource.password=vt41tuwta2hhIVTUgekbLrfx8liLxiWa
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# JPA config
+# JPA config - remove explicit dialect to avoid warning
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # Logging
 logging.level.org.hibernate.SQL=WARN
