--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -146,6 +146,16 @@
 	</dependencies>
 
 	<build>
+
+	<resources>
+  <resource>
+    <directory>src/main/resources</directory>
+    <includes>
+      <include>**/*.xlsx</include>
+    </includes>
+  </resource>
+</resources>
+
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
