--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -142,19 +142,27 @@
 		    <artifactId>jjwt-jackson</artifactId> <!-- or jjwt-gson if Gson is preferred -->
 		    <version>0.11.5</version>
 		</dependency>
+
+		<dependency>
+    <groupId>com.h2database</groupId>
+    <artifactId>h2</artifactId>
+    <scope>test</scope>
+</dependency>
+
 	
 	</dependencies>
 
 	<build>
 
-	<resources>
+<resources>
   <resource>
     <directory>src/main/resources</directory>
     <includes>
-      <include>**/*.xlsx</include>
+      <include>**/*</include>
     </includes>
   </resource>
 </resources>
+
 
 		<plugins>
 			<plugin>
