--- a/demo/src/main/resources/application-production.properties
+++ b/demo/src/main/resources/application-production.properties
@@ -28,7 +28,7 @@ springdoc.api-docs.version=openapi-3-0
 springdoc.swagger-ui.path=/swagger-ui.html
 
 # CORS configuration for production
-cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:4200,https://your-frontend-domain.com}
+cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:4200,https://clinica-shiba-angular-theta.vercel.app}
 
 # Multipart file uploads
 spring.servlet.multipart.max-file-size=10MB
