--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -26,7 +26,7 @@ springdoc.api-docs.version=openapi-3-0
 springdoc.swagger-ui.path=/swagger-ui.html
 
 # CORS
-cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:4200,http://localhost:3000}
+cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:4200,http://localhost:3000,https://clinica-shiba-angular-theta.vercel.app}
 
 # Archivos subidos
 spring.servlet.multipart.max-file-size=10MB
