--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     environment:
       - SPRING_PROFILES_ACTIVE=production
       - PORT=8090
-      - CORS_ALLOWED_ORIGINS=http://localhost:4200,https://clinica-shiba-angular-theta.vercel.app
+      - CORS_ALLOWED_ORIGINS=http://localhost:4200
     volumes:
       - clinica_data:/app/data
     healthcheck:
