cors configuration and drugs

--- a/demo/src/main/resources/application-production.properties
+++ b/demo/src/main/resources/application-production.properties
@@ -40,7 +40,7 @@ management.health.defaults.enabled=true
 spring.security.require-ssl=false
 
 # CORS configuration for production
-cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:4200,https://your-frontend-domain.com}
+cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:4200,https://clinica-shiba-angular-theta.vercel.app}
 
 # File upload configuration
 spring.servlet.multipart.max-file-size=10MB
