--- a/render.yaml
+++ b/render.yaml
@@ -13,7 +13,7 @@ services:
       - key: PORT
         value: 8090
       - key: CORS_ALLOWED_ORIGINS
-        value: http://localhost:4200,https://your-frontend-domain.com
+        value: http://localhost:4200,https://clinica-shiba-angular-theta.vercel.app
     disk:
       name: clinica-shiba-data
       mountPath: /app/data
